--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -19,10 +19,10 @@
     <div class="input-group-prepend">
       <div class="input-group-text">Taille (entre 1,6 et 2m)</div>
     </div>
-    <div class="input-group-end">
-        <div class="input-group-text">Taille (entre 1,6 et 2m)</div>
-    </div>
     <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="1,6">
+    <div class="input-group-prepend">
+        <div class="input-group-text">m</div>
+    </div>
 </div>
 
 <!-- APPRENANT FORMATEUR -->
