Un petit pas pour l'homme

--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -1,5 +1,7 @@
-<div class="jumbotron bg-light">
-    <h1 class="display-4">PHP procédural</h1>
-    <hr class="my-4">
-    <p>J'apprends et je me perfectionne.</p>  
-</div>
+<header>
+    <div class="jumbotron bg-light">
+        <h1 class="display-4">PHP procédural</h1>
+        <hr class="my-4">
+        <p>J'apprends et je me perfectionne.</p>  
+    </div>
+</header>
