--- a/includes/ul.inc.html
+++ b/includes/ul.inc.html
@@ -1,15 +1,17 @@
-<li class="nav-item nav-tabs">
-    <a class="nav-link" href="#">Débogage</a>
-</li>
-<li class="nav-item nav-tabs">
-    <a class="nav-link" href="#">Concaténation</a>
-</li>
-<li class="nav-item nav-tabs">
-    <a class="nav-link" href="#">Boucle</a>
-</li>
-<li class="nav-item nav-tabs">
-    <a class="nav-link" href="#">Fonction</a>
-</li>
-<li class="nav-item nav-tabs">
-    <a class="nav-link" href="#">Supprimer</a>
-</li>
+<ul class="nav flex-column">
+    <li class="nav-item nav-tabs">
+        <a class="nav-link" href="#">Débogage</a>
+    </li>
+    <li class="nav-item nav-tabs">
+        <a class="nav-link" href="#">Concaténation</a>
+    </li>
+    <li class="nav-item nav-tabs">
+        <a class="nav-link" href="#">Boucle</a>
+    </li>
+    <li class="nav-item nav-tabs">
+        <a class="nav-link" href="#">Fonction</a>
+    </li>
+    <li class="nav-item nav-tabs">
+        <a class="nav-link" href="#">Supprimer</a>
+    </li>
+</ul>
