--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -1,43 +1,46 @@
+<form action='index.php?add' method='POST'>
 
-<h2>Ajouter des données</h2>
+    <h2 class="text-center">Ajouter des données</h2>
 
-<!-- FORMULAIRE -->
+    <!-- FORMULAIRE -->
 
-<div class="form-group">
-    <label for="exampleInputEmail1">Prénom</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Renseignez votre prénom">
-</div>
-<div class="form-group">
-    <label for="exampleInputPassword1">Nom</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Renseignez vos nom">
-</div>
-<div class="form-group">
-    <label for="exampleInputPassword1">Age (18 à 60 ans)</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="18">
-</div>
-<div class="input-group mb-2">
-    <div class="input-group-prepend">
-      <div class="input-group-text">Taille (entre 1,6 et 2m)</div>
+    <div class="form-group">
+        <label>Prénom</label>
+        <input name='prenom' type="text" class="form-control" placeholder="Renseignez votre prénom">
     </div>
-    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="1,6">
-    <div class="input-group-prepend">
-        <div class="input-group-text">m</div>
+    <div class="form-group">
+        <label>Nom</label>
+        <input name='nom' type="text" class="form-control" placeholder="Renseignez vos nom">
     </div>
-</div>
+    <div class="form-group">
+        <label>Age (18 à 60 ans)</label>
+        <input name='age' type="number" class="form-control" min="18" max="60" placeholder="18">
+    </div>
+    <div class="input-group mb-2">
+        <div class="input-group-prepend">
+        <div class="input-group-text">Taille (entre 1,6 et 2m)</div>
+        </div>
+        <input name='size' type="number" class="form-control" min="1.6" max="2" step="0.01" placeholder="1,6">
+        <div class="input-group-prepend">
+            <div class="input-group-text">m</div>
+        </div>
+    </div>
 
-<!-- APPRENANT FORMATEUR -->
+    <!-- APPRENANT FORMATEUR -->
 
-<div class="form-check">
-<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-<label class="form-check-label" for="exampleRadios1">Apprenant</label>
-</div>
-<div class="form-check">
-<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-<label class="form-check-label" for="exampleRadios2">Formateur</label>
-</div>
+    <div class="form-check">
+    <input name='situation' class="form-check-input" type="radio" value="option1" checked>
+    <label class="form-check-label" >Apprenant</label>
+    </div>
+    <div class="form-check">
+    <input name='situation' class="form-check-input" type="radio" value="option2">
+    <label class="form-check-label" >Formateur</label>
+    </div>
 
-<!-- BOUTON -->
+    <!-- BOUTON -->
 
-<div class="d-flex justify-content-end">
-  <button type="submit" class="btn btn-primary">Enregistrer les données</button>
-</div>
+    <div class="d-flex justify-content-end">
+    <button name='submit' type="submit" class="btn btn-primary">Enregistrer les données</button>
+    </div>
+
+</form>
