--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -29,11 +29,11 @@
     <!-- APPRENANT FORMATEUR -->
 
     <div class="form-check">
-    <input name='situation' class="form-check-input" type="radio" value="option1" checked>
+    <input name='situation' class="form-check-input" type="radio" value="apprenant" checked>
     <label class="form-check-label" >Apprenant</label>
     </div>
     <div class="form-check">
-    <input name='situation' class="form-check-input" type="radio" value="option2">
+    <input name='situation' class="form-check-input" type="radio" value="formateur">
     <label class="form-check-label" >Formateur</label>
     </div>
 
