--- a/includes/ul.inc.html
+++ b/includes/ul.inc.html
@@ -11,7 +11,7 @@
     <li class="nav-item nav-tabs">
         <a class="nav-link" href="index.php?function">Fonction</a>
     </li>
-    <li class="nav-item nav-tabs">
-        <a class="nav-link" href="index.php?delete">Supprimer</a>
+    <li class="nav-item">
+        <a class="nav-link" href="index.php?del">Supprimer</a>
     </li>
 </ul>
