--- a/includes/form.inc.html
+++ b/includes/form.inc.html
@@ -1,4 +1,4 @@
-<form action='index.php?add' method='POST'>
+<form action='index.php?add' method='POST'>        <!-- FORMULAIRE -->
 
     <h2 class="text-center">Ajouter des données</h2>
 
