--- a/includes/header.inc.html
+++ b/includes/header.inc.html
@@ -1,4 +1,4 @@
-<header class="d-none d-sm-block">
+<header class="d-none d-sm-block"> <!-- Rendre le header invisible via la classe -->
     <div class="jumbotron bg-light">
         <h1 class="display-4">PHP procédural</h1>
         <hr class="my-4">
