--- a/includes/ul.inc.html
+++ b/includes/ul.inc.html
@@ -1,4 +1,4 @@
-<ul class="nav flex-column">
+<ul class="nav flex-column">            <!-- MENU -->
     <li class="nav-item nav-tabs">
         <a class="nav-link" href="index.php?debugging">Débogage</a>
     </li>
