--- a/includes/footer.inc.html
+++ b/includes/footer.inc.html
@@ -1,3 +1,3 @@
 <footer>
-     <p class="text-center">© 2021 Luc Vigneron - PHP</p> <!-- Footer -->
+     <p class="pt-3 text-center">© 2021 Luc Vigneron - PHP</p> <!-- Footer -->
 </footer>
